# co_learning_robot_personalities

./: .gitignore  .gitmodules  ANOVA.R  LICENSE.txt  README.md  RepeatedMANOVA.R  Send_command.py  adjust_image.py  data_plotting.R  data_processing.R  fsm.py  run_command.txt  setup_multimachine_ros  setup_multimachine_ros.md  test.py  test_import.py
.catkin_tools/profiles/default/: devel_collisions.txt
Python/: CoLearnEnvironment.py  ControlNode.py  Send_command.py
Q_tables/: q_table_1.npy  q_table_10.npy  q_table_11.npy  q_table_12.npy  q_table_2.npy  q_table_3.npy  q_table_4.npy  q_table_5.npy  q_table_6.npy  q_table_7.npy  q_table_8.npy  q_table_9.npy  q_table_solved_100000_1.npy  q_table_solved_100000_2.npy  q_table_solved_100000_3.npy  q_table_solved_1000_1.npy  q_table_solved_1000_2.npy  q_table_solved_1000_3.npy
co_learning_controllers/: CMakeLists.txt  package.xml  setup.py
co_learning_controllers/launch/: bringup.launch  co_learning_test_setup.launch  driver_bringup.launch  machineB.launch
co_learning_controllers/src/: control_node.py  questionaire_controller.py
co_learning_controllers/src/co_learning_controllers/: control_node.py  hand_controller.py  handover_controller.py  questionaire_controller.py  robot_controller.py  robot_impedance_controller.py
co_learning_controllers/src/co_learning_controllers/robot/: robot.py
co_learning_detection/: CMakeLists.txt  package.xml  setup.py
co_learning_detection/src/co_learning_detection/: detection.py  retrain_pipeline.ipynb
co_learning_messages/: CMakeLists.txt  package.xml
co_learning_messages/msg/: Database.msg  control_status_message.msg  hand_pose.msg  secondary_task_message.msg
co_learning_secondary_task/: CMakeLists.txt  setup.py
co_learning_secondary_task/src/co_learning_secondary_task/: pshape.py  pyhapi.py  secondary_task.py
data_collection/participant_1/personality_type_impatient/bag_files/: robot_state_episode_0.bag
data_collection/participant_1/personality_type_leader/bag_files/: robot_state_episode_1.bag
data_collection/participant_2/personality_type_baseline/bag_files/: robot_state_episode_0.bag
data_collection/participant_2/personality_type_impatient/bag_files/: robot_state_episode_0.bag
data_collection/participant_2/personality_type_leader/bag_files/: robot_state_episode_1.bag
data_collection/participant_2/personality_type_patient/bag_files/: robot_state_episode_0.bag
data_collection/participant_3/personality_type_baseline/bag_files/: robot_state_episode_0.bag
data_collection/participant_3/personality_type_impatient/bag_files/: robot_state_episode_5.bag
data_collection/participant_3/personality_type_leader/bag_files/: robot_state_episode_1.bag
data_collection/participant_4/personality_type_patient/bag_files/: robot_state_episode_2.bag
data_collection/participant_5/personality_type_leader/bag_files/: robot_state_episode_1.bag
data_collection/participant_5/personality_type_patient/bag_files/: robot_state_episode_1.bag
data_processing/: ANOVA.R  RepeatedMANOVA.R  action_preference.R  check_for_colearning.R  data_plotting.R  data_processing.R
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/pkgconfig/: q_learning.pc
jupyter/: CoLearning_Environment.ipynb  Project1_Breakout.ipynb  Project2_SelfDriving.ipynb  Project3_Custom.ipynb  Project4_CustomQlearning.ipynb  RL_Toy.ipynb
jupyter/.ipynb_checkpoints/: Project3_Custom-checkpoint.ipynb  RL_Toy-checkpoint.ipynb
q_learning/: CMakeLists.txt  package.xml  setup.py
q_learning/src/q_learning/: CoLearnEnvironment.py  QLearnAgent.py
qb_hand/devel/: .catkin  local_setup.sh  setup.sh
rviz_configs/: camera_view.rviz
src/: CoLearnEnvironment.py  ControlNode.py  HyperParameter_Search.py  PA3_MAIN.py  QLearnAgent.py  Send_command.py  pshape.py
src/Messages/: CMakeLists.txt  package.xml
src/Secondary_task/: CMakeLists.txt  setup.py
src/Secondary_task/src/: PA3_MAIN.py  secondary_task.py
src/co_learning_controllers/: CMakeLists.txt  package.xml  setup.py
src/co_learning_controllers/launch/: arm_launch.launch  bringup.launch  co_learning_test_setup.launch  control_qbhand.launch  hand_launch.txt  test.launch
src/co_learning_controllers/src/: ControlNode.py  HandController.py  ManualController.py  control_node.py  hand_controller.py  robot_controller.py  robot_controller_new.py  robot_impedance_controller.py
src/co_learning_controllers/src/co_learning_controllers/: control_node.py
src/co_learning_controllers/src/robot/: _ikine.py  robot.py
src/co_learning_controllers/urdf/: combined_arm_hand.urdf.xacro
src/co_learning_detection/: CMakeLists.txt  setup.py
src/co_learning_detection/src/: body_pose_detection.py  detection.py  object_detection.py  object_detection_test.py  pose_detection.py  pose_detection_api.py  retrain_pipeline.ipynb
src/co_learning_messages/: CMakeLists.txt  package.xml
src/co_learning_messages/msg/: Detection.msg  hand_pose.msg  secondary_task_message.msg
src/co_learning_pose_detection/: CMakeLists.txt  launch_instruction.txt  package.xml  setup.py
src/co_learning_pose_detection/launch/: launch_realsense.sh
src/co_learning_pose_detection/src/: pose_detection.py
src/co_learning_secondary_task/: package.xml  setup.py
src/co_learning_secondary_task/src/: pantograph.py  pshape.py  secondary_task.py
src/co_learning_secondary_task/src/co_learning_secondary_task/: pantograph.py
src/launch/: co_learning_test_setup.launch
src/q_learning/: CMakeLists.txt  package.xml  setup.py
src/q_learning/src/: CoLearnEnvironment.py  QLearnAgent.py  RL_with_options.py
src/q_learning/src/q_learning/: CoLearnEnvironment.py  QLearnAgent.py
src/state_machine/: CMakeLists.txt  package.xml  setup.py
src/state_machine/launch/: co_learning_test_setup.launch
src/state_machine/src/: ControlNode.py
src/urdf/: iiwa7.urdf
src/urdf/iiwa7_0_ikfast_plugin/: CMakeLists.txt  iiwa7_0_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/urdf/iiwa7_0_ikfast_plugin/src/: iiwa7_0_ikfast_moveit_plugin.cpp  iiwa7_0_ikfast_solver.cpp
(+151 files in other folders)
