<?xml version="1.0"?>
<package format="2">
  <name>co_learning_messages</name>
  <version>0.0.1</version>
  <description>Custom messages for co-learning project.</description>

  <maintainer email="j.r.dolfin@student.tudelft.nl">Jesse Dolfin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
