<?xml version="1.0"?>
<package format="2">
  <name>co_learning_controllers</name>
  <version>0.0.1</version>
  <description>Package handling the control of the robotic arm.</description>

  <maintainer email="j.r.dolfin@student.tudelft.nl">Jesse Dolfin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cor_tud_msgs</build_depend>
  <build_depend>co_learning_messages</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cor_tud_msgs</exec_depend>
  <exec_depend>co_learning_messages</exec_depend>
</package>

