<?xml version="1.0"?>
<package format="2">
  <name>state_machine</name>
  <version>0.0.1</version>
  <description>Defines the package that handles the state machine and urdf / launch files</description>

  <maintainer email="j.r.dolfin@student.tudelft.nl">Jesse</maintainer>

  <license>Apach 2.0 - Free for all, no warranties whatsoever</license>

  <author email="j.r.dolfin@student.tudelft.nl">Jesse</author>


  <!-- TODO: should we set this? -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cor_tud_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>co_learning_messages</build_depend>
  
  <build_export_depend>cor_tud_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>co_learning_messages</build_export_depend>

   
  <!--exec_depend>cartesian_impedance_controller</exec_depend-->
  <!-- build_depend>std_msgs</build_depend -->
  <!-- build_export_depend>std_msgs</build_export_depend -->
      
  <!-- exec_depend>actionlib_msgs</exec_depend -->
  <!-- exec_depend>std_msgs</exec_depend -->

</package>
